--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     compile project(':rxtools')
     //SVG描边动画 http://blog.csdn.net/leaf_130/article/details/54848071
     compile 'com.jaredrummler:animated-svg-view:1.0.4'
+
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     //下拉刷新上拉加载
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
 //    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
