--- a/rxtools/build.gradle
+++ b/rxtools/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "27.0.1"
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -29,32 +29,32 @@ ext {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:support-v4:26+'
+    implementation 'com.android.support:support-v4:26+'
     //appcompat包 26.0.0-beta1
-    compile 'com.android.support:appcompat-v7:26+'
+    implementation 'com.android.support:appcompat-v7:26+'
     //design包 26.0.0-alpha1
-    compile 'com.android.support:design:26+'
+    implementation 'com.android.support:design:26+'
     //cardView包 26.0.0-alpha1
-    compile 'com.android.support:cardview-v7:26+'
+    implementation 'com.android.support:cardview-v7:26+'
     //recyclerview包 26.0.0-alpha1
-    compile 'com.android.support:recyclerview-v7:26+'
-    compile 'com.android.support:support-annotations:26+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:26+'
+    implementation 'com.android.support:support-annotations:26+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //retrofit、okhttp3和rxjava
     //retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     //gson解析
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     //okhttp3
-    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     //rxjava
-    compile 'io.reactivex:rxjava:1.0.1'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    implementation 'io.reactivex:rxjava:1.0.1'
+    implementation 'io.reactivex:rxandroid:1.0.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
 
     //显示图片框架
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
