--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -13,10 +14,10 @@ android {
         multiDexEnabled true
 
         vectorDrawables.useSupportLibrary = true
-//        ndk {
-//            //APP的build.gradle设置支持的SO库架构
-//            abiFilters 'armeabi', 'armeabi-v7a', 'x86', 'x86_64'
-//        }
+        ndk {
+            //APP的build.gradle设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86', 'x86_64'
+        }
     }
     buildTypes {
         release {
@@ -30,9 +31,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             //apk命名
             android.applicationVariants.all { variant ->
-                variant.outputs.all { output ->
-                    //这里修改apk文件名
-                    outputFileName = "${defaultConfig.applicationId}_v${defaultConfig.versionCode}.apk"
+                variant.outputs.each { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        //这里修改apk文件名
+                        def fileName = "${defaultConfig.applicationId}_v${defaultConfig.versionCode}.apk"
+                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
                 }
             }
         }
@@ -46,26 +51,25 @@ android {
 }
 
 dependencies {
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-    implementation project(':rxtools')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    compile project(':rxtools')
     //SVG描边动画 http://blog.csdn.net/leaf_130/article/details/54848071
-    implementation 'com.jaredrummler:animated-svg-view:1.0.4'
+    compile 'com.jaredrummler:animated-svg-view:1.0.4'
 
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     //下拉刷新上拉加载
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
-//    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+//    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
     // banner
-    implementation 'cn.bingoogolapple:bga-banner:2.1.9'
+    compile 'cn.bingoogolapple:bga-banner:2.1.9'
     //底部导航按钮点击效果
-    implementation 'com.aurelhubert:ahbottomnavigation:1.2.0'
+    compile 'com.aurelhubert:ahbottomnavigation:1.2.0'
     //侧滑退出
-    implementation 'com.gongwen:swipeback:1.0.2'
+    compile 'com.gongwen:swipeback:1.0.2'
     //图片选择 TouchImageView图片缩放
-    implementation 'me.iwf.photopicker:PhotoPicker:0.8.4@aar'
+    compile 'me.iwf.photopicker:PhotoPicker:0.8.4@aar'
     //view注解
-    implementation 'com.jakewharton:butterknife:8.0.1'
-    annotationProcessor 'com.jakewharton:butterknife-implementationr:8.0.1'
+    compile 'com.jakewharton:butterknife:8.0.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
