--- a/rxtools/build.gradle
+++ b/rxtools/build.gradle
@@ -29,32 +29,32 @@ ext {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:support-v4:26+'
+    compile 'com.android.support:support-v4:26+'
     //appcompat包 26.0.0-beta1
-    implementation 'com.android.support:appcompat-v7:26+'
+    compile 'com.android.support:appcompat-v7:26+'
     //design包 26.0.0-alpha1
-    implementation 'com.android.support:design:26+'
+    compile 'com.android.support:design:26+'
     //cardView包 26.0.0-alpha1
-    implementation 'com.android.support:cardview-v7:26+'
+    compile 'com.android.support:cardview-v7:26+'
     //recyclerview包 26.0.0-alpha1
-    implementation 'com.android.support:recyclerview-v7:26+'
-    implementation 'com.android.support:support-annotations:26+'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:recyclerview-v7:26+'
+    compile 'com.android.support:support-annotations:26+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //retrofit、okhttp3和rxjava
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     //gson解析
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     //okhttp3
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     //rxjava
-    implementation 'io.reactivex:rxjava:1.0.1'
-    implementation 'io.reactivex:rxandroid:1.0.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    compile 'io.reactivex:rxjava:1.0.1'
+    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
 
     //显示图片框架
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
