--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -31,13 +30,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             //apk命名
             android.applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    def outputFile = output.outputFile
-                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        //这里修改apk文件名
-                        def fileName = "${defaultConfig.applicationId}_v${defaultConfig.versionCode}.apk"
-                        output.outputFile = new File(outputFile.parent, fileName)
-                    }
+                variant.outputs.all { output ->
+                    //这里修改apk文件名
+                    outputFileName = "${defaultConfig.applicationId}_v${defaultConfig.versionCode}.apk"
                 }
             }
         }
@@ -55,7 +50,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':rxtools')
     //SVG描边动画 http://blog.csdn.net/leaf_130/article/details/54848071
-    compile 'com.jaredrummler:animated-svg-view:1.0.4'
+    compile 'com.jaredrummler:animated-svg-view:1.0.5'
 
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     //下拉刷新上拉加载
@@ -71,5 +66,5 @@ dependencies {
     compile 'me.iwf.photopicker:PhotoPicker:0.8.4@aar'
     //view注解
     compile 'com.jakewharton:butterknife:8.0.1'
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    annotationProcessor  'com.jakewharton:butterknife-compiler:8.0.1'
 }
