--- a/refresh-layout/build.gradle
+++ b/refresh-layout/build.gradle
@@ -25,23 +25,47 @@ android {
     }
 }
 
+// 打包源码jar
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    failOnError  false
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += configurations.compile
+}
+
+// 打包文档jar
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
     //noinspection GradleDependency
-    provided 'com.android.support:support-annotations:26+'
+    compileOnly 'com.android.support:support-annotations:26+'
     //noinspection GradleDependency,GradleCompatible
-    provided ('com.android.support:support-v4:26+') {
+    compileOnly ('com.android.support:support-v4:22.1.0') {
         exclude group: 'com.android.support'
     }
     //noinspection GradleDependency,GradleCompatible
-    provided ('com.android.support:recyclerview-v7:26+') {
+    compileOnly ('com.android.support:recyclerview-v7:21.0.0') {
         exclude group: 'com.android.support'
     }
-    provided ('com.android.support:design:26+') {
+    compileOnly ('com.android.support:design:26+') {
         exclude group: 'com.android.support'
     }
 
