--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,12 +65,17 @@
         <activity
             android:name=".test.HeartLikeViewActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
-
         <activity
             android:name=".test.RichTextActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
         <activity
             android:name=".test.PopWinActivity"
+            android:theme="@style/AppTheme.SwipeBack"/>
+        <activity
+            android:name=".test.TickerActivity"
+            android:theme="@style/AppTheme.SwipeBack"/>
+        <activity
+            android:name=".test.RunTextActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
 
         <activity android:name=".bigimage.BigImagePagerActivity"
