--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
         <activity
             android:name=".test.RunTextActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
+        <activity
+            android:name=".test.PhoneInfoActivity"
+            android:theme="@style/AppTheme.SwipeBack"/>
 
         <activity android:name=".bigimage.BigImagePagerActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
