--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,9 @@
         <activity
             android:name=".ui.main.LoginActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
+        <activity
+            android:name=".ui.zxing.ScanerCodeActivity"
+            android:theme="@style/AppTheme.SwipeBack"/>
 
         <activity android:name=".bigimage.BigImagePagerActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
