--- a/refresh-layout/build.gradle
+++ b/refresh-layout/build.gradle
@@ -50,25 +50,24 @@ artifacts {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
     //noinspection GradleDependency
-    compileOnly 'com.android.support:support-annotations:26+'
+    implementation 'com.android.support:support-annotations:26+'
     //noinspection GradleDependency,GradleCompatible
-    compileOnly ('com.android.support:support-v4:22.1.0') {
+    implementation('com.android.support:support-v4:22.1.0') {
         exclude group: 'com.android.support'
     }
     //noinspection GradleDependency,GradleCompatible
-    compileOnly ('com.android.support:recyclerview-v7:21.0.0') {
+    implementation('com.android.support:recyclerview-v7:21.0.0') {
         exclude group: 'com.android.support'
     }
-    compileOnly ('com.android.support:design:26+') {
+    implementation('com.android.support:design:26+') {
         exclude group: 'com.android.support'
     }
-
 }
 //
 //publish {
