--- a/tools-library/build.gradle
+++ b/tools-library/build.gradle
@@ -29,32 +29,29 @@ ext {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    compile 'com.android.support:support-v4:26+'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api 'com.android.support:support-v4:26+'
     //appcompat包 26.0.0-beta1
-    compile 'com.android.support:appcompat-v7:26+'
+    api 'com.android.support:appcompat-v7:26+'
     //design包 26.0.0-alpha1
-    compile 'com.android.support:design:26+'
+    api 'com.android.support:design:26+'
     //cardView包 26.0.0-alpha1
-    compile 'com.android.support:cardview-v7:26+'
+    api 'com.android.support:cardview-v7:26+'
     //recyclerview包 26.0.0-alpha1
-    compile 'com.android.support:recyclerview-v7:26+'
-    compile 'com.android.support:support-annotations:26+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    api 'com.android.support:recyclerview-v7:26+'
+    api 'com.android.support:support-annotations:26+'
+    api 'com.android.support.constraint:constraint-layout:1.0.2'
     //retrofit、okhttp3和rxjava
     //retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+    api 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     //gson解析
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    api 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     //okhttp3
-    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    api 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     //rxjava
-    compile 'io.reactivex:rxjava:1.0.1'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
-
+    api 'io.reactivex:rxjava:1.0.1'
+    api 'io.reactivex:rxandroid:1.0.1'
+    api 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     //显示图片框架
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    api 'com.github.bumptech.glide:glide:3.7.0'
 }
