--- a/tools-library/build.gradle
+++ b/tools-library/build.gradle
@@ -43,15 +43,21 @@ dependencies {
     api 'com.android.support.constraint:constraint-layout:1.0.2'
     //retrofit、okhttp3和rxjava
     //retrofit
-    api 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+//    api 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+    api 'com.squareup.retrofit2:retrofit:2.1.0'
     //gson解析
-    api 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+//    api 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    api 'com.squareup.retrofit2:converter-gson:2.1.0'
     //okhttp3
-    api 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    api 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     //rxjava
-    api 'io.reactivex:rxjava:1.0.1'
-    api 'io.reactivex:rxandroid:1.0.1'
-    api 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+//    api 'io.reactivex:rxjava:1.0.1'
+//    api 'io.reactivex:rxandroid:1.0.1'
+//    api 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    api 'io.reactivex.rxjava2:rxjava:2.0.1'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.1.0'
     //显示图片框架
     api 'com.github.bumptech.glide:glide:3.7.0'
 }
