--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.main.FirstStartActivity" />
+        <activity
             android:name=".ui.main.MainActivity"
             android:launchMode="singleTask" />
         <activity
