banner直接引用style后页面不显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.FirstStartActivity" />
+            android:name=".ui.main.FirstStartActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".ui.main.MainActivity"
             android:launchMode="singleTask" />
