--- a/tools-library/src/main/AndroidManifest.xml
+++ b/tools-library/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <!-- 外部存储 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -22,15 +23,8 @@
     <!-- 许可调用相机自动对焦 -->
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
-    <uses-permission android:name="com.veni.tools.permission.BroadcastReceiverNetWork" />
-
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-        <receiver android:name=".FutileTool$BroadcastReceiverNetWork" android:permission="com.veni.tools.permission.BroadcastReceiverNetWork">
-            <intent-filter>
-                <action android:name="com.veni.tools.BroadcastReceiverNetWork" />
-            </intent-filter>
-        </receiver>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
