#拖拽式层叠卡片

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,9 @@
             android:name=".test.PhoneInfoActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
         <activity
+            android:name=".test.CardGroupActivity"
+            android:theme="@style/AppTheme.SwipeBack"/>
+        <activity
             android:name=".ui.main.LoginActivity"
             android:theme="@style/AppTheme.SwipeBack"/>
         <activity
