--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':refresh-layout', ':tools-library', ':recycler-adapter-helper', ':patternlockview', ':patternlockview-reactive'
+include ':app', ':refresh-layout', ':tools-library', ':recycler-adapter-helper', ':patternlockview', ':patternlockview-reactive', ':swipebacklayout'
