--- a/tools-library/build.gradle
+++ b/tools-library/build.gradle
@@ -50,13 +50,14 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     //gson解析
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //标准解析
+//    api 'com.squareup.retrofit2:converter-scalars:2.1.0'
     //okhttp3
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     //rxjava
     api 'io.reactivex.rxjava2:rxjava:2.1.8'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    api 'com.squareup.retrofit2:converter-scalars:2.1.0'
     //显示图片框架
     api 'com.github.bumptech.glide:glide:3.7.0'
 }
